--- a/Accountant/Accountant/Configurations/Info.plist
+++ b/Accountant/Accountant/Configurations/Info.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>$(BUILD_NUMBER)</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
