--- a/Accountant/AccountantTests/Configurations/Info.plist
+++ b/Accountant/AccountantTests/Configurations/Info.plist
@@ -15,8 +15,10 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(BUILD_NUMBER)</string>
+	<key>projectFilePath</key>
+	<string>$(PROJECT_FILE_PATH)</string>
 </dict>
 </plist>
